--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.1",
+    "@ant-design/plots": "^2.1.1",
+    "@phosphor-icons/react": "^2.0.15",
     "@supabase/supabase-js": "^2.39.0",
     "antd": "^5.12.1",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
