--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.2.6",
     "@ant-design/plots": "^2.1.1",
     "@phosphor-icons/react": "^2.0.15",
+    "@react-pdf/renderer": "^3.1.14",
     "@supabase/supabase-js": "^2.39.0",
     "antd": "^5.12.1",
     "dayjs": "^1.11.10",
